--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -1,10 +1,10 @@
 
 server {
     listen 80;
-    location /uploads/ {
-        root  /home/box/web/public;
+    location ^~/uploads/ {
+        root  /home/box/web/;
     }
-    location ~ \.\w+& {
+    location ~\.\w+$ {
         root /home/box/web/public;
     }
 }
