--- a/web/etc/gunicorn.conf
+++ b/web/etc/gunicorn.conf
@@ -1,11 +1,12 @@
 CONFIG = {
-    'mode': 'wsgi',
-    'working_dir': '/home/box/web',
-    'python': '/usr/bin/python',
-    'args': (
-        '--bind=0.0.0.0:8080',
-        '--workers=16',
-        '--timeout=60',
-        'hello',
-    ),
+  'mode': 'wsgi',
+  'python': '/usr/bin/python',
+  'working_dir': '/home/box/web/ask/',
+  'args': (
+    '--bind=0.0.0.0:8000',
+    '--workers=2',
+    '--timeout=15',
+    '--log-level=debug',
+    'ask.wsgi:application',
+  ),
 }
