--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -1,17 +1,16 @@
-
 server {
     listen 80;
-    location ^~/uploads/ {
-        root  /home/box/web/;
-    }
-    location ~\.\w+$ {
-        root /home/box/web/public;
-    }
+#    location ^~/uploads/ {
+#        root  /home/box/web/;
+#    }
+#    location ~\.\w+$ {
+#        root /home/box/web/public;
+#    }
     location /hello/ {
         proxy_pass http://127.0.0.1:8080;
     }
     location / {
-        proxy_pass http://127.0.0.1:8080;
+        proxy_pass http://127.0.0.1:8000;
     }
 }
 
